My personal websit the background come on the first day the two day

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </div>
     </div>
     <div id="nav">
+        <span id="logo_one"></span>
+        <span id="logo_two"></span>
 
     </div>
     <!--<script>-->
