My personal websit the background come on the first day the two day the menu is a question

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
         </div>
     </div>
     <div id="nav">
-        <span id="logo_one"></span>
-        <span id="logo_two"></span>
-
+        <span id="logol_one"><b>welcome to my personal website</b></span>
+        <span id="logol_two">
+            <span class="menu"></span>
+            <span class="menu"></span>
+            <span class="menu"></span>
+        </span>
     </div>
+    lllllll
     <!--<script>-->
         <!--var oBackground= document.getElementById("background");-->
         <!--var oBackground_list = document.getElementById("background_list");-->
