My personal websit the background come on the first day the two day the menu is a question

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <img src="img/background4.jpg" alt="" class="">
             <img src="img/background5.jpg" alt="" class="">
         </div>
+        <span id="background_word">
+          <b>You are young <br>
+            &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; and <br>
+             &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; you can be anyone <br>
+               &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; you want to be.</b>
+        </span>
         <ul id="background_list">
             <li class="selected"></li>
             <li class=""></li>
@@ -28,16 +34,57 @@
             <span id="next"><b>&gt;</b></span>
         </div>
     </div>
+    <!--<audio src="music/one.mp3" autoplay controls id="music"></audio>-->
     <div id="nav">
-        <span id="logol_one"><b>welcome to my personal website</b></span>
-        <span id="logol_two">
+        <div id="logol_one"><b>Welcome To My Personal Website</b></div>
+        <div id="logol_two">
             <span class="menu"></span>
             <span class="menu"></span>
             <span class="menu"></span>
-        </span>
+        </div>
     </div>
-    lllllll
-    <!--<script>-->
+    <div id="intro">
+            <img src="img/logol.jpg" alt="">
+            <span id="first">MY HOBBY</span>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+    </div>
+    <div id="intro2">
+        <span class="item"><b>HOME</b></span>
+        <span class="item"><b>ABILITY</b></span>
+        <span class="item"><b>HOBBY</b></span>
+        <span class="item"><b>CONTACT ME</b></span>
+        <span class="item">the times </span>
+
+    </div>
+    <div id="content">
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+        lalallalal <br>
+    </div>
+
+
+        <!--<script>-->
         <!--var oBackground= document.getElementById("background");-->
         <!--var oBackground_list = document.getElementById("background_list");-->
         <!--var aLi = oBackground_list.getElementsByTagName("li");-->
