My personal websit the background come on the first day the two day the menu is a question

--- a/index.html
+++ b/index.html
@@ -44,11 +44,17 @@
         </div>
     </div>
     <div id="intro">
-            <img src="img/logol.jpg" alt="">
-            <span id="first">MY HOBBY</span>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="img/logol2.jpg" alt="">
+
+            <img src="img/logol1.jpg" alt="">
+
+            <img src="img/logol3.jpg" alt="">
+
+            <img src="img/logol4.jpg" alt="">
+             <span id="first">  MY HOBBY</span>
+            <span id="second">MY ABILITY</span>
+            <span id="third"></span>
+            <span id="CONTECT ME"></span>
     </div>
     <div id="intro2">
         <span class="item"><b>HOME</b></span>
