--- a/index.html
+++ b/index.html
@@ -44,50 +44,98 @@
         </div>
     </div>
     <div id="intro">
-            <img src="img/logol2.jpg" alt="">
+            <img src="img/logo1.jpg" alt="">
+            <img src="img/logo2.jpg" alt="">
+            <img src="img/logo3.jpg" alt="">
+            <img src="img/logo4.jpg" alt="">
 
-            <img src="img/logol1.jpg" alt="">
-
-            <img src="img/logol3.jpg" alt="">
-
-            <img src="img/logol4.jpg" alt="">
-             <span id="first">  MY HOBBY</span>
+            <span id="first">  MY HOBBY</span>
             <span id="second">MY ABILITY</span>
             <span id="third"></span>
             <span id="CONTECT ME"></span>
     </div>
     <div id="intro2">
-        <span class="item"><b>HOME</b></span>
-        <span class="item"><b>ABILITY</b></span>
-        <span class="item"><b>HOBBY</b></span>
-        <span class="item"><b>CONTACT ME</b></span>
-        <span class="item">the times </span>
+        <span class="item"><b>About</b></span>
+        <span class="item"><b>Resume</b></span>
+        <span class="item"><b>Skills</b></span>
+        <span class="item"><b>Contact me</b></span>
+        <span class="item"><b>Item</b></span>
+        <!--<span class="item"> <i class="fa fa-gift" aria-hidden="true"></i></span>-->
 
     </div>
     <div id="content">
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
-        lalallalal <br>
+        <div id="content_word">
+            <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Who I am</span>
+            <span class="htll2"> </span>
+            <h1>&nbsp;&nbsp;About me</h1>
+            <div id="photo">
+            </div>
+
+
+        </div>
+        <div id="person">
+            你好！我叫王柏慧 <br>
+
+            黑龙江大学数据科学与技术学院 2015 级网络工程专业学生,有扎实的编程功底，以及敏感的互联网思维，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。
+            本人个性开朗，容易相处，有责任感，团队荣誉感强。 本人动手能力极强，对硬件方面动手能力非常强，精通各种系统 环境安装与操作，对于硬件方面有很强的动手能力。 本人可以使用原生 JS 实现各种常见的效果。
+            <div id="btn">
+                <div class="intro1">&lt;</div>
+                <span class="intro2">Learn More...</span>
+            </div>
+        </div>
+        <hr>
+
     </div>
+    <div id="skill">
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+        hhhhh <br>
+
+
+    </div>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
+    hhhhh <br>
 
 
         <!--<script>-->
