My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>王柏慧的个人网站</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <div id="background">
@@ -56,7 +57,7 @@
     </div>
     <div id="intro2">
         <span class="item"><b>About</b></span>
-        <span class="item"><b>Resume</b></span>
+        <span class="item"><b>Services</b></span>
         <span class="item"><b>Skills</b></span>
         <span class="item"><b>Contact me</b></span>
         <span class="item"><b>Item</b></span>
@@ -64,14 +65,12 @@
 
     </div>
     <div id="content">
-        <div id="content_word">
+        <div class="content_word">
             <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Who I am</span>
             <span class="htll2"> </span>
             <h1>&nbsp;&nbsp;About me</h1>
             <div id="photo">
             </div>
-
-
         </div>
         <div id="person">
             你好！我叫王柏慧 <br>
@@ -86,56 +85,94 @@
         <hr>
 
     </div>
+    <div id="services">
+        <div class="content_word">
+            <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What I do</span>
+            <span class="htll2"> </span>
+            <h1>&nbsp;&nbsp;Services</h1>
+        </div>
+        <div id="services_side">
+            <div class="side">
+                <div class="title">
+                    <i class="fa fa-hand-peace-o fa-lg" aria-hidden="true"></i>
+                </div>
+                <h4>网站开发</h4>
+                <span> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;可以做各种网站（暂时还只是静态页面，了解一些java SQL交互）...</span>
+            </div>
+            <div class="side">
+                <div class="title">
+                    <i class="fa fa-hand-scissors-o fa-lg" aria-hidden="true"></i>
+                </div>
+                <h4>编码</h4>
+                <span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 掌握多门语言，有较强的思维和逻辑，自认为可以胜任后台的一些工作...</span>
+            </div>
+            <div class="side">
+                <div class="title">
+                    <i class="fa fa-hand-o-up fa-lg" aria-hidden="true"></i>
+                </div>
+                <h4>产品设计</h4>
+                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 总是有各种各样的想法千奇百怪，没有我想不到只有你做不到...</span>
+            </div>
+        </div>
+    </div>
     <div id="skill">
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
-        hhhhh <br>
+        <div class="content_word">
+            <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thoughtful</span>
+            <span class="htll2"> </span>
+            <h1>&nbsp;&nbsp;Services</h1>
+        </div>
+        <div id="skill_contain">
+            <div class="skill_spect">
+                <span class="circle">
+                    <canvas height="122" width="122" style="height:150px; width:150px;"></canvas>
+
+                </span>
+
+            </div>
+            <div class="skill_spect">
+                <span class="circle">
+
+                </span>
+
+            </div>
+            <div class="skill_spect">
+                <span class="circle">
+
+                </span>
+
+            </div>
+        </div>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+        hlll <br>
+
+
 
 
     </div>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
-    hhhhh <br>
 
 
         <!--<script>-->
