--- a/index.html
+++ b/index.html
@@ -121,26 +121,55 @@
             <span class="htll2"> </span>
             <h1>&nbsp;&nbsp;Services</h1>
         </div>
-        <div id="skill_contain">
+        <div class="skill_contain">
             <div class="skill_spect">
                 <span class="circle">
-                    <canvas height="122" width="122" style="height:150px; width:150px;"></canvas>
-
+                    <span class="percent">
+                        80%
+                    </span>
+                    <canvas id="myCanvas" width="130" height="130"></canvas>
+                    <h7> DEVELOPMENT</h7>
                 </span>
+                <div class="skill_tree">
+                    html5  90%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_tt"></div>
+
+                </div>
+                <div class="skill_tree">
+                    css  90%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_dd"></div>
+                </div>
+                <div class="skill_tree">
+                    Javascript  85%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_cc"></div>
+                </div>
+
 
             </div>
             <div class="skill_spect">
                 <span class="circle">
+                     <span class="percent">
+                        60%
+                    </span>
+                     <canvas id="myCanvas2" width="130" height="130"></canvas>
+                    <h7> BACKSTAGE</h7>
 
                 </span>
 
-            </div>
-            <div class="skill_spect">
-                <span class="circle">
+            <!--</div>-->
+            <!--<div class="skill_spect">-->
+                <!--<span class="circle">-->
+                    <!--<canvas height="122" width="122" style="height:125px; width:125px;"></canvas>-->
 
-                </span>
+                <!--</span>-->
 
-            </div>
+            <!--</div>-->
         </div>
         hlll <br>
         hlll <br>
@@ -168,81 +197,11 @@
         hlll <br>
         hlll <br>
         hlll <br>
-
-
-
-
     </div>
 
-
-        <!--<script>-->
-        <!--var oBackground= document.getElementById("background");-->
-        <!--var oBackground_list = document.getElementById("background_list");-->
-        <!--var aLi = oBackground_list.getElementsByTagName("li");-->
-        <!--var oBackground_img = document.getElementById("background_img");-->
-        <!--var aImg = oBackground_img.getElementsByTagName("img");-->
-        <!--var oPrev = document.getElementById("prev");-->
-        <!--var oNext = document.getElementById("next");-->
-        <!--var nowIndex = 0;//全局变量，保存当前显示的图片的索引-->
-        <!--var timer;-->
-        <!--for(var i=0; i<aLi.length; i++){-->
-            <!--aLi[i].index = i;//给每个li对象自定义属性，保存住当时的i的值-->
-            <!--/*-->
-             <!--相当于：-->
-             <!--aLi[0].index = 0;-->
-             <!--aLi[1].index = 1;-->
-             <!--aLi[2].index = 2;-->
-             <!--aLi[3].index = 3;*/-->
-            <!--aLi[i].onmouseover = function(){-->
-                <!--nowIndex = this.index;-->
-                <!--changeImg();-->
-            <!--};-->
-        <!--}-->
-
-        <!--oPrev.onclick = oNext.onclick = function(){-->
-            <!--if(this === oPrev){-->
-                <!--nowIndex&#45;&#45;;-->
-                <!--if(nowIndex == -1){-->
-                    <!--nowIndex = aLi.length - 1;//3-->
-                <!--}-->
-            <!--}else{-->
-                <!--nowIndex++;-->
-                <!--if(nowIndex == aLi.length){-->
-                    <!--nowIndex = 0;-->
-                <!--}-->
-            <!--}-->
-            <!--changeImg();-->
-        <!--};-->
-
-        <!--oPrev.onselectstart = oNext.onselectstart = function(){-->
-            <!--return false;-->
-        <!--};-->
-
-        <!--oBackground.onmouseover = function(){-->
-            <!--clearInterval(timer);-->
-        <!--};-->
-        <!--oBackground.onmouseout = function(){-->
-            <!--play();-->
-        <!--};-->
-
-        <!--play();-->
-
-        <!--function play(){-->
-            <!--timer = setInterval(function(){-->
-                <!--oNext.onclick();-->
-            <!--}, 1500);-->
-        <!--}-->
-
-        <!--function changeImg(){-->
-            <!--for(var i=0; i<aLi.length; i++){-->
-                <!--aLi[i].className = "";-->
-                <!--aImg[i].className = "";-->
-            <!--}-->
-            <!--aLi[nowIndex].className = "selected";-->
-            <!--aImg[nowIndex].className = "selected";-->
-        <!--}-->
-    <!--</script>-->
+    <script src="js/style.js"></script>
     <script src="js/index.js"></script>
+        <!--<script src="js/index1.js"></script>-->
 
 </body>
 </html>
