--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <span class="item"><b>About</b></span>
         <span class="item"><b>Services</b></span>
         <span class="item"><b>Skills</b></span>
-        <span class="item"><b>Contact me</b></span>
         <span class="item"><b>Item</b></span>
+        <span class="item"><b>Contact me</b></span>
         <!--<span class="item"> <i class="fa fa-gift" aria-hidden="true"></i></span>-->
 
     </div>
@@ -119,7 +119,7 @@
         <div class="content_word">
             <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thoughtful</span>
             <span class="htll2"> </span>
-            <h1>&nbsp;&nbsp;Services</h1>
+            <h1>&nbsp;&nbsp;Skills</h1>
         </div>
         <div class="skill_contain">
             <div class="skill_spect">
@@ -159,8 +159,26 @@
                     </span>
                      <canvas id="myCanvas2" width="130" height="130"></canvas>
                     <h7> BACKSTAGE</h7>
-
                 </span>
+                <div class="skill_tree">
+                    php  90%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_tt"></div>
+
+                </div>
+                <div class="skill_tree">
+                    node.js  90%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_dd"></div>
+                </div>
+                <div class="skill_tree">
+                    c  85%
+                </div>
+                <div class="tree_one">
+                    <div id="tree_one_cc"></div>
+                </div>
 
             <!--</div>-->
             <!--<div class="skill_spect">-->
@@ -170,6 +188,14 @@
                 <!--</span>-->
 
             <!--</div>-->
+        </div>
+        </div>
+    </div>
+    <div id="item">
+        <div class="content_word">
+            <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overall</span>
+            <span class="htll2"> </span>
+            <h1>&nbsp;&nbsp;Item</h1>
         </div>
         hlll <br>
         hlll <br>
@@ -191,13 +217,70 @@
         hlll <br>
         hlll <br>
         hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
+
     </div>
+    <div id="contact_me">
+      <div id="find_me">
+          <h4>Fine me</h4>
+          <span></span>
+          <ul id="content_logol">
+              <li>
+                  <i class="fa fa-qq fa-stack" aria-hidden="true"></i>
+              </li>
+              <li>
+                  <i class="fa  fa-weixin fa-stack" aria-hidden="true"></i>
+              </li>
+              <a href="http://weibo.com/u/5812589770/home?wvr=5">
+              <li>
+                  <i class="fa  fa-weibo fa-stack" aria-hidden="true"></i>
+              </li>
+              </a>
+              <a href="http://github.com">
+              <li>
+                  <i class="fa  fa-github fa-stack" aria-hidden="true">
+                  </i>
+              </li>
+              </a>
+          </ul>
+      </div>
+        <div id="contact_info">
+            <h4>Contant info</h4>
+            <span></span>
+            <a href="#">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                18249214675
+            </a>
+            <br>
+            <a href="#">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                18249214675@163.com
+            </a>
+            <a href="#">
+                <i class="fa fa-bath" aria-hidden="true"></i>
+                黑龙江哈尔滨黑龙江大学
+            </a>
+        </div>
+
+        <div id="suggestion">
+            <h4>您的意见：</h4>
+            <span></span>
+            <input type="text" id="frame">
+            <form action="" id="sub">
+                <input type="submit" value="提交">
+            </form>
+
+        </div>
+    </div>
+    <div id="register">
+        <div id="register_text">
+            <h6>©2017 王柏慧</h6>
+            <a href="http://www.miitbeian.gov.cn/"> 黑ICP备17007614号</a>
+        </div>
+        <div id="top">
+        </div>
+
+    </div>
+
 
     <script src="js/style.js"></script>
     <script src="js/index.js"></script>
