My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -197,27 +197,45 @@
             <span class="htll2"> </span>
             <h1>&nbsp;&nbsp;Item</h1>
         </div>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
-        hlll <br>
 
+        <div id="item_class">
+            <span id="prev2"> &lt;</span>
+            <span id="next2"> &gt;</span>
+
+
+            <div id="item_introduce">
+                <ul>
+                    <li>
+                        <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                        <span> <a href="#">仿站星巴克</a> </span>
+                    </li>
+                    <li>
+                        <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                        <span> <a href="#">仿站淘宝</a> </span>
+                    </li>
+                    <li>
+                    <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                    <span> <a href="#">仿站</a> </span>
+                    </li>
+                    <li>
+                    <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                    <span> <a href="#">仿站</a> </span>
+                    </li>
+                    <li>
+                    <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                    <span> <a href="#">仿站</a> </span>
+                    </li>
+                    <li>
+                    <a href="#" class="intem_photo"></a><img src="img/星巴克.png" alt="">
+                    <span> <a href="#">仿站</a> </span>
+                </li>
+                </ul>
+            </div>
+
+
+
+
+        </div>
     </div>
     <div id="contact_me">
       <div id="find_me">
