My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="background">
         <div id="background_img">
-            <img src="img/background1.jpg" alt="" class="selected">
-            <img src="img/background2.jpg" alt="" class="">
-            <img src="img/background3.jpg" alt="" class="">
-            <img src="img/background4.jpg" alt="" class="">
-            <img src="img/background5.jpg" alt="" class="">
+            <img src="img/bg1.jpeg" alt="" class="selected">
+            <img src="img/bg2.jpeg" alt="" class="">
+            <img src="img/bg3.jpeg" alt="" class="">
+            <img src="img/bg4.jpeg" alt="" class="">
+            <img src="img/bg5.jpeg" alt="" class="">
         </div>
         <span id="background_word">
           <b>You are young <br>
@@ -39,16 +39,14 @@
     <div id="nav">
         <div id="logol_one"><b>Welcome To My Personal Website</b></div>
         <div id="logol_two">
-            <span class="menu"></span>
-            <span class="menu"></span>
-            <span class="menu"></span>
+            <i class="fa fa-list-ul" aria-hidden="true"></i>
         </div>
     </div>
     <div id="intro">
-            <img src="img/logo1.jpg" alt="">
-            <img src="img/logo2.jpg" alt="">
-            <img src="img/logo3.jpg" alt="">
-            <img src="img/logo4.jpg" alt="">
+            <img src="img/logol1.jpg" alt="">
+            <img src="img/logol2.jpg" alt="">
+            <img src="img/logol3.jpg" alt="">
+            <img src="img/logol4.jpg" alt="">
 
             <span id="first">  MY HOBBY</span>
             <span id="second">MY ABILITY</span>
@@ -253,7 +251,7 @@
                   <i class="fa  fa-weibo fa-stack" aria-hidden="true"></i>
               </li>
               </a>
-              <a href="http://github.com">
+              <a href="http://github.com/wbh1234">
               <li>
                   <i class="fa  fa-github fa-stack" aria-hidden="true">
                   </i>
