My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable = no, initial-scale =1.0 maximum-scale=1.0">
     <title>王柏慧的个人网站</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
@@ -29,7 +30,6 @@
             <li class=""></li>
             <li class=""></li>
         </ul>
-
         <div id="background_sorrn">
             <span id="prev"><b>&lt;</b></span>
             <span id="next"><b>&gt;</b></span>
@@ -42,11 +42,11 @@
             <i class="fa fa-list-ul" aria-hidden="true"></i>
         </div>
     </div>
-    <div id="intro">
-            <img src="img/logol1.jpg" alt="">
-            <img src="img/logol2.jpg" alt="">
-            <img src="img/logol3.jpg" alt="">
-            <img src="img/logol4.jpg" alt="">
+    <div id="intro"3>
+            <img src="img/logol1.jpg" alt="" class="">
+            <img src="img/logol2.jpg" alt="" class="">
+            <img src="img/logol3.jpg" alt="" class="">
+            <img src="img/logol4.jpg" alt="" class="">
 
             <span id="first">  MY HOBBY</span>
             <span id="second">MY ABILITY</span>
@@ -59,7 +59,7 @@
         <span class="item"><b>Skills</b></span>
         <span class="item"><b>Item</b></span>
         <span class="item"><b>Contact me</b></span>
-        <!--<span class="item"> <i class="fa fa-gift" aria-hidden="true"></i></span>-->
+        <span class="item"> <i class="fa fa-gift" aria-hidden="true"></i></span>
 
     </div>
     <div id="content">
@@ -132,20 +132,20 @@
                     html5  90%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_tt"></div>
+                    <div class="tree_one_tt"></div>
 
                 </div>
                 <div class="skill_tree">
                     css  90%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_dd"></div>
+                    <div class="tree_one_dd"></div>
                 </div>
                 <div class="skill_tree">
                     Javascript  65%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_cc"></div>
+                    <div class="tree_one_cc"></div>
                 </div>
 
 
@@ -162,30 +162,30 @@
                     php  90%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_tt"></div>
+                    <div class="tree_one_tt"></div>
 
                 </div>
                 <div class="skill_tree">
                     node.js  90%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_dd"></div>
+                    <div class="tree_one_dd"></div>
                 </div>
                 <div class="skill_tree">
                     c  85%
                 </div>
                 <div class="tree_one">
-                    <div id="tree_one_cc"></div>
+                    <div class="tree_one_cc"></div>
                 </div>
 
-            <!--</div>-->
-            <!--<div class="skill_spect">-->
-                <!--<span class="circle">-->
-                    <!--<canvas height="122" width="122" style="height:125px; width:125px;"></canvas>-->
+            </div>
+            <div class="skill_spect">
+                <span class="circle">
+                    <canvas height="122" width="122" style="height:125px; width:125px;"></canvas>
 
-                <!--</span>-->
+                </span>
 
-            <!--</div>-->
+            </div>
         </div>
         </div>
     </div>
