--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
 
     <script src="js/style.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/jquery-1.12.4.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
         <!--<script src="js/index1.js"></script>-->
 
 </body>
