My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <span id="CONTECT ME"></span>
     </div>
     <div id="intro2">
-        <span class="item"><b>About</b></span>
-        <span class="item"><b>Services</b></span>
-        <span class="item"><b>Skills</b></span>
-        <span class="item"><b>Item</b></span>
-        <span class="item"><b>Contact me</b></span>
-        <span class="item"> <i class="fa fa-gift" aria-hidden="true"></i></span>
+        <span class="item1"><b>About</b></span>
+        <span class="item2"><b>Services</b></span>
+        <span class="item3"><b>Skills</b></span>
+        <span class="item4"><b>Item</b></span>
+        <span class="item5"><b>Contact me</b></span>
+        <span class="item6"> <i class="fa fa-gift" aria-hidden="true"></i></span>
 
     </div>
     <div id="content">
