--- a/index.html
+++ b/index.html
@@ -301,8 +301,13 @@
     <script src="js/style.js"></script>
     <script src="js/index.js"></script>
     <script src="js/jquery-1.12.4.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-        <!--<script src="js/index1.js"></script>-->
+    <script>
+        $(function(){
+            $(".item2").on("click", function(){
+                $("html,body").animate({scrollTop:$("services").offset().top},50);
+            })
+        })
+    </script>
 
 </body>
 </html>
