--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
             <img src="img/bg5.jpeg" alt="" class="">
         </div>
         <span id="background_word">
-          <b>You are young <br>
-            &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; and <br>
-             &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; you can be anyone <br>
-               &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; you want to be.</b>
         </span>
         <ul id="background_list">
             <li class="selected"></li>
@@ -42,24 +38,19 @@
             <i class="fa fa-list-ul" aria-hidden="true"></i>
         </div>
     </div>
-    <div id="intro"3>
-            <img src="img/logol1.jpg" alt="" class="">
-            <img src="img/logol2.jpg" alt="" class="">
-            <img src="img/logol3.jpg" alt="" class="">
-            <img src="img/logol4.jpg" alt="" class="">
+    <div id="intro">
+            <img src="img/logol1.jpg" alt="" id="one">
+            <img src="img/logol2.jpg" alt="" id="two">
+            <img src="img/logol3.jpg" alt="" id="three">
+            <img src="img/logol4.jpg" alt="" id="four">
 
-            <span id="first">  MY HOBBY</span>
-            <span id="second">MY ABILITY</span>
-            <span id="third"></span>
-            <span id="CONTECT ME"></span>
     </div>
     <div id="intro2">
-        <span class="item1"><b>About</b></span>
-        <span class="item2"><b>Services</b></span>
-        <span class="item3"><b>Skills</b></span>
-        <span class="item4"><b>Item</b></span>
-        <span class="item5"><b>Contact me</b></span>
-        <span class="item6"> <i class="fa fa-gift" aria-hidden="true"></i></span>
+        <span id="item1"><b>About</b></span>
+        <span id="item2"><b>Services</b></span>
+        <span id="item3"><b>Skills</b></span>
+        <span id="item4"><b>Item</b></span>
+        <span id="item5"><b>Contact me</b></span>
 
     </div>
     <div id="content">
@@ -71,14 +62,16 @@
             </div>
         </div>
         <div id="person">
-            你好！我叫王柏慧 <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;你好！我叫王柏慧 <br>
+            来自黑龙江大学数据科学与技术学院网络工程专业</br>
 
-            黑龙江大学数据科学与技术学院 2015 级网络工程专业学生,有扎实的编程功底，以及敏感的互联网思维，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。
-            本人个性开朗，容易相处，有责任感，团队荣誉感强。 本人动手能力极强，对硬件方面动手能力非常强，精通各种系统 环境安装与操作，对于硬件方面有很强的动手能力。 本人可以使用原生 JS 实现各种常见的效果。
-            <div id="btn">
-                <div class="intro1">&lt;</div>
-                <span class="intro2">Learn More...</span>
-            </div>
+
+            <!--黑龙江大学数据科学与技术学院 2015 级网络工程专业学生,有扎实的编程功底，以及敏感的互联网思维，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。-->
+            <!--本人个性开朗，容易相处，有责任感，团队荣誉感强。 本人动手能力极强，对硬件方面动手能力非常强，精通各种系统 环境安装与操作，对于硬件方面有很强的动手能力。 本人可以使用原生 JS 实现各种常见的效果。-->
+            <!--<div id="btn">-->
+                <!--<div class="intro1">&lt;</div>-->
+                <!--<span class="intro2">Learn More...</span>-->
+            <!--</div>-->
         </div>
         <hr>
 
@@ -188,7 +181,6 @@
             </div>
         </div>
         </div>
-    </div>
     <div id="item">
         <div class="content_word">
             <span class="htll">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overall</span>
@@ -300,13 +292,65 @@
 
     <script src="js/style.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/typing.js"></script>
+    <script src="js/pacture.js"></script>
     <script src="js/jquery-1.12.4.js"></script>
     <script>
         $(function(){
+            $(".item1").on("click",function(){
+                $("html,body").animate({scrollTop:$(content).offset().top},70)
+            });
             $(".item2").on("click", function(){
-                $("html,body").animate({scrollTop:$("services").offset().top},50);
+                $("html,body").animate({scrollTop:$(services).offset().top},70);
+            });
+            $(".item3").on("click",function(){
+                $("html,body").animate({scrollTop:$(skill).offset().top},70);
+            });
+            $(".item4").on("click",function(){
+                $("html,body").animate({scrollTop:$(item).offset().top},70);
+            });
+            $(".item5").on("click",function(){
+                $("html,body").animate({scrollTop:$(item).offset().top},70);
             })
+
         })
+        var oItem1 = document.getElementById("item1");
+        var oItem2 = document.getElementById("item2");
+        var oItem3 = document.getElementById("item3");
+        var oItem4 = document.getElementById("item4");
+        var oItem5 = document.getElementById("item5");
+
+        oItem1.onmouseover = function(){
+            oItem1.style.color="red";
+        }
+        oItem1.onmouseout = function(){
+            oItem1.style.color="white";
+        }
+        oItem2.onmouseover = function(){
+            oItem2.style.color="red";
+        }
+        oItem2.onmouseout = function(){
+            oItem2.style.color="white";
+        }
+        oItem3.onmouseover = function(){
+            oItem3.style.color="red";
+        }
+        oItem3.onmouseout = function(){
+            oItem3.style.color="white";
+        }
+        oItem4.onmouseover = function(){
+            oItem4.style.color="red";
+        }
+        oItem4.onmouseout = function(){
+            oItem4.style.color="white";
+        }
+        oItem5.onmouseover = function(){
+            oItem5.style.color="red";
+        }
+        oItem5.onmouseout = function(){
+            oItem5.style.color="white";
+        }
+
     </script>
 
 </body>
