--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
         </div>
         <div id="person">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;你好！我叫王柏慧 <br>
-            来自黑龙江大学数据科学与技术学院网络工程专业</br>
-
-
-            <!--黑龙江大学数据科学与技术学院 2015 级网络工程专业学生,有扎实的编程功底，以及敏感的互联网思维，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。-->
-            <!--本人个性开朗，容易相处，有责任感，团队荣誉感强。 本人动手能力极强，对硬件方面动手能力非常强，精通各种系统 环境安装与操作，对于硬件方面有很强的动手能力。 本人可以使用原生 JS 实现各种常见的效果。-->
+            来自黑龙江大学数据科学与技术学院2015级网络工程专业的学生，
+            有扎实的编程功底，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。
+            乐观开朗，积极向上，容易相处，有责任感，团队荣誉感强。
             <!--<div id="btn">-->
                 <!--<div class="intro1">&lt;</div>-->
                 <!--<span class="intro2">Learn More...</span>-->
