My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -67,10 +67,6 @@
             来自黑龙江大学数据科学与技术学院2015级网络工程专业的学生，
             有扎实的编程功底，极强的学习能力, 熟悉网络编辑工作流程，对基本的办公事宜有所了解。
             乐观开朗，积极向上，容易相处，有责任感，团队荣誉感强。
-            <!--<div id="btn">-->
-                <!--<div class="intro1">&lt;</div>-->
-                <!--<span class="intro2">Learn More...</span>-->
-            <!--</div>-->
         </div>
         <hr>
 
@@ -87,14 +83,14 @@
                     <i class="fa fa-hand-peace-o fa-lg" aria-hidden="true"></i>
                 </div>
                 <h4>网站开发</h4>
-                <span> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;可以做各种网站（暂时还只是静态页面，了解一些java SQL交互）...</span>
+                <span> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;可以做各种网站仿战，并且利用js原生，requery和各种组件完成动态效果</span>
             </div>
             <div class="side">
                 <div class="title">
                     <i class="fa fa-hand-scissors-o fa-lg" aria-hidden="true"></i>
                 </div>
                 <h4>编码</h4>
-                <span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 掌握多门语言，有较强的思维和逻辑，自认为可以胜任后台的一些工作...</span>
+                <span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 学习了解C语言，C++，java；可以利用php，node.js进行后台的实现，并且在项目中已经应用</span>
             </div>
             <div class="side">
                 <div class="title">
@@ -114,10 +110,7 @@
         <div class="skill_contain">
             <div class="skill_spect">
                 <span class="circle">
-                    <span class="percent">
-                        80%
-                    </span>
-                    <canvas id="myCanvas" width="130" height="130"></canvas>
+                    <canvas id="myCanvas" width="130" height="130" style="width: 120px;height: 120px"></canvas>
                     <h7> DEVELOPMENT</h7>
                 </span>
                 <div class="skill_tree">
@@ -144,9 +137,6 @@
             </div>
             <div class="skill_spect">
                 <span class="circle">
-                     <span class="percent">
-                        60%
-                    </span>
                      <canvas id="myCanvas2" width="130" height="130"></canvas>
                     <h7> BACKSTAGE</h7>
                 </span>
