My personal websit the background come on the first day the two day the menu is a question
introduce me and have a good start

I learn many knowledge that I don't know president, and I'm so happy

--- a/index.html
+++ b/index.html
@@ -111,63 +111,70 @@
             <div class="skill_spect">
                 <span class="circle">
                     <canvas id="myCanvas" width="130" height="130" style="width: 120px;height: 120px"></canvas>
-                    <h7> DEVELOPMENT</h7>
+                    <h7>HTML HTML5/CSS CSS3</h7>
+                    <div class="skill_tree">
+                    能熟练运用HTML,HTML5和CSS,CSS3的各种标签,精通HTML+CSS网页布局与设计，了解CSS3的各种动画，并能实现，利用canvas绘制图案
+                </div>
                 </span>
-                <div class="skill_tree">
-                    html5  90%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_tt"></div>
-
-                </div>
-                <div class="skill_tree">
-                    css  90%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_dd"></div>
-                </div>
-                <div class="skill_tree">
-                    Javascript  65%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_cc"></div>
-                </div>
-
-
-            </div>
-            <div class="skill_spect">
                 <span class="circle">
-                     <canvas id="myCanvas2" width="130" height="130"></canvas>
-                    <h7> BACKSTAGE</h7>
+                    <canvas id="myCanvas1" width="130" height="130" style="width: 120px;height: 120px"></canvas>
+                    <h7>Java Script</h7>
+                     <div class="skill_tree">
+                        熟悉掌握Java Script原生代码，了解常用的标签，BOM，DOM，正则表达式，Javascript的异步加载，并且能良好的运用W3C手册,熟悉require.js和JQuery,并能使用
+                     </div>
                 </span>
-                <div class="skill_tree">
-                    php  90%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_tt"></div>
-
-                </div>
-                <div class="skill_tree">
-                    node.js  90%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_dd"></div>
-                </div>
-                <div class="skill_tree">
-                    c  85%
-                </div>
-                <div class="tree_one">
-                    <div class="tree_one_cc"></div>
-                </div>
-
-            </div>
-            <div class="skill_spect">
                 <span class="circle">
-                    <canvas height="122" width="122" style="height:125px; width:125px;"></canvas>
+                    <canvas id="myCanvas2" width="130" height="130" style="width: 120px;height: 120px"></canvas>
+                    <h7>Webpack</h7>
+                     <div class="skill_tree">
+                        了解并能应用webpack 掌握打包和代码压缩等一些常用功能；了解Vue，能利用Vue-cli进行项目的构建，
 
+                     </div>
+                </span>
+                <span class="circle">
+                    <canvas id="myCanvas3" width="130" height="130" style="width: 120px;height: 120px"></canvas>
+                    <h7>PHP/Node.js</h7>
+                    <div class="skill_tree">
+                        了解并能使用php和node.js并可以利用ajax进行前后台数据的传输
+                </div>
                 </span>
 
+
+
             </div>
+            <!--<div class="skill_spect">-->
+                <!--<span class="circle">-->
+                     <!--<canvas id="myCanvas2" width="130" height="130"></canvas>-->
+                    <!--&lt;!&ndash;<h7> BACKSTAGE</h7>&ndash;&gt;-->
+                <!--</span>-->
+                <!--&lt;!&ndash;<div class="skill_tree">&ndash;&gt;-->
+                    <!--&lt;!&ndash;php  90%&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="tree_one">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<div class="tree_one_tt"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="skill_tree">&ndash;&gt;-->
+                    <!--&lt;!&ndash;node.js  90%&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="tree_one">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<div class="tree_one_dd"></div>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="skill_tree">&ndash;&gt;-->
+                    <!--&lt;!&ndash;c  85%&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="tree_one">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<div class="tree_one_cc"></div>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="skill_spect">&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="circle">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<canvas height="122" width="122" style="height:125px; width:125px;"></canvas>&ndash;&gt;-->
+<!--&lt;!&ndash;&ndash;&gt;-->
+                <!--&lt;!&ndash;</span>&ndash;&gt;-->
+
+            <!--</div>-->
         </div>
         </div>
     <div id="item">
